// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanelCard renders with isActive and onClick 1`] = `
<a
  className="side-panel-card side-panel-card--active"
  onClick={[Function]}
  style={Object {}}
>
  <svg
    className="side-panel-card__icon side-panel-card__icon--yyy"
    height="60"
    width="60"
  >
    <circle
      cx="30"
      cy="30"
      fill="white"
      r="29"
      stroke="silver"
      strokeWidth="2"
    />
  </svg>
  <span
    className="side-panel-card__title"
  >
    zzz
  </span>
</a>
`;

exports[`SidePanelCard renders with minimum props 1`] = `
<a
  className="side-panel-card"
  onClick={[Function]}
  style={Object {}}
>
  <svg
    className="side-panel-card__icon side-panel-card__icon--yyy"
    height="60"
    width="60"
  >
    <circle
      cx="30"
      cy="30"
      fill="white"
      r="29"
      stroke="silver"
      strokeWidth="2"
    />
  </svg>
  <span
    className="side-panel-card__title"
  >
    zzz
  </span>
</a>
`;
